--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,14 @@ jobs:
             -allowProvisioningUpdates \
             CODE_SIGNING_ALLOWED=NO \
             CODE_SIGN_IDENTITY="" \
-            CODE_SIGNING_REQUIRED=NO
+            CODE_SIGNING_REQUIRED=NO \
+            DEBUG_INFORMATION_FORMAT=dwarf-with-dsym
+
+      - name: Upload dSYMs to Embrace
+        uses: embrace-io/action-symbol-upload@v2
+        with:
+          app_id: ${{ vars.APP_ID }}
+          api_token: ${{ secrets.EMBRACE_API_TOKEN }}
 
       - name: Prepare artifacts
         id: prepare_artifacts
